poppr 2.0.2.99
===========
IMPROVEMENTS
* `win.ia` and `samp.ia` gain a significant speedup thanks to Jonah Brooks implementing the code in C.
* `poppr.msn`, `bruvo.msn`, and `plot_poppr_msn` gain the ability to take character vectors for color palettes. 
* `plot_poppr_msn` returns the modified graph.

MISC
* Documentation for genclone and snpclone classes are more coherent.
* Accessors added for internal MLG objects (for developers).

BUG FIX
* Single locus data sets can now be read in with `read.genalex`. This was brought up in issue [#58](https://github.com/grunwaldlab/poppr/issues/58) (Thanks to Nick Wong for spotting it).

poppr 2.0.2
===========
BUG FIX
* Definition of Hexp was fixed. It originally was mis-calculated, inflating the metric. It is now correctly calcualted and documented. More information at issue [#47](https://github.com/grunwaldlab/poppr/issues/47)

poppr 2.0.1
===========
BUG FIX
* Memory leak with Bruvo's distance was fixed by @JonahBrooks in 90facb4 (issue #40)
* Cutoff field now works for distances other than dissimilarity in `imsn` (issue #41)
* Switching between data sets no longer shows an error in `imsn`
* `read.genealex` can now correctly import missing data for diploids (issue #42)

NEW FEATURES
* Startup message now tells you if poppr was compiled with OMP support.

poppr 2.0.0
===========
COMPATIBILITY UPDATE
* poppr has moved to version 2.0 due to adegenet's recent update. The hierarchy slot introduced in version 1.1 is now being moved to adegenet and renamed `strata`. For maximum backwards compatibility, all of the hierarchy methods still exist, but they are deprecated and will print a warning with the proper function to use. If you were accessing the hierarchy slot without using the `*hierarchy()` methods, your code will fail as the hierarchy slot now should only contain a formula object. 

NEW DEPENDENCIES
* poppr now imports elements from dplyr and shiny